fix(base.css): a11y color contrast for links

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 a {
-  @apply text-blue-600 underline;
+  @apply text-blue-700 underline;
 }
 
 a:hover,
